--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,8 @@ jobs:
             GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
             REPLICATE_API_TOKEN=${{ secrets.REPLICATE_API_TOKEN }}
             GCP_CREDENTIALS=${{ secrets.GCP_CREDENTIALS }}
+            SUPABASE_URL=${{ secrets.SUPABASE_URL }}
+            SUPABASE_KEY=${{ secrets.SUPABASE_KEY }}
 
       - name: 🌐 Print Gaming Agents API Service URL
         run: |
